# flapi

./: .cursorignore  .cursorules  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.build  FLAPI_AGENT.md  LICENSE  Makefile  Readme.md  prompt.md  vcpkg.json
.ai/: 10_openapi.yaml  (+16 more)
test/: CMakeLists.txt  config_manager_test.cpp  main_test.cpp  sql_template_processor_test.cpp
test/cpp/: CMakeLists.txt  archive_io_test.cpp  audit_logger_test.cpp  auth_middleware_test.cpp  bundle_locator_test.cpp  cache_manager_test.cpp  config_manager_path_resolution_test.cpp  config_manager_test.cpp  config_manager_yaml_validation_test.cpp  config_service_filesystem_test.cpp  config_service_parameters_test.cpp  config_service_schema_test.cpp  config_service_slug_test.cpp  config_service_template_lookup_test.cpp  config_service_test.cpp  config_tool_adapter_test.cpp  cors_policy_test.cpp  data_manager_ducklake_test.cpp  database_manager_ducklake_test.cpp  database_manager_test.cpp  duckdb_embed_fs_test.cpp  embedded_archive_file_provider_test.cpp  endpoint_config_parser_test.cpp  extended_yaml_parser_test.cpp  https_config_test.cpp  macho_bundle_test.cpp  mcp_authorization_policy_test.cpp  mcp_description_scanner_test.cpp  mcp_dry_run_test.cpp  mcp_prompt_handler_test.cpp  mcp_request_validator_test.cpp  mcp_response_shaper_test.cpp  mcp_server_test.cpp  mcp_tool_handler_test.cpp  mcp_tool_rate_limiter_test.cpp  pack_test.cpp  password_hasher_test.cpp  prepared_template_rewriter_test.cpp  prepared_value_converter_test.cpp  query_executor_test.cpp  (+33 more)
test/integration/: .gitignore  README.md  api_blueprint.apib  arrow_helpers.py  conftest.py  dredd.yml  package-lock.json  package.json  pyproject.toml  smoke_resource_limits.sh  test_arrow_helpers.py  test_arrow_streaming.py  test_audit_log.py  test_config_service_endpoints.tavern.yaml  test_config_service_schema.py  test_cors_allowlist.py  test_customers.tavern.yaml  test_customers_cached.tavern.yaml  test_data_types.tavern.yaml  test_ducklake_advanced.py  test_ducklake_cache.tavern.yaml  test_ducklake_comprehensive.tavern.yaml  test_ducklake_scheduler.py  test_env_overrides.py  test_examples_customers.py  test_examples_mcp.py  test_examples_northwind.py  test_https_config.py  test_json_column.tavern.yaml  test_load_testing.py  test_mcp_config_tools.py  test_mcp_config_workflow.py  test_mcp_description_hygiene.py  test_mcp_dry_run.py  test_mcp_instructions.py  test_mcp_integration.py  test_mcp_methods.py  test_mcp_per_tool_rate_limit.py  test_mcp_prompts.py  test_mcp_rbac.py  (+25 more)
test/integration/api_configuration/: flapi.yaml
test/integration/api_configuration/data/: data_types.parquet
test/integration/api_configuration/sqls/: customer_analysis_prompt.yaml  customers-create.sql  customers-create.yaml  customers-delete.sql  customers-delete.yaml  customers-get-id.sql  customers-get.sql  customers-get.yaml  customers-patch.sql  customers-patch.yaml  customers-update.sql  customers-update.yaml  customers-validation.sql  customers.sql  customers.yaml  customers_cached.yaml  customers_mcp.yaml  customers_validation.yaml  customers_write_mcp.yaml  data_insights_prompt.yaml  data_types.sql  data_types.yaml  data_types_mcp.yaml  get_customers_mcp.yaml  json_demo.sql  json_demo.yaml  rate_limit_disabled.yaml  rate_limit_test.sql  rate_limit_test.yaml  simple_greeting_prompt.yaml  sql_query_prompt.yaml  test.yaml  test_append.yaml  test_auth_debug.tavern.yaml  test_cache.sql  test_cached.yaml  test_incremental.yaml  test_merge.yaml  validation_test_mcp.yaml
test/integration/api_configuration/sqls/customers/: customer_analysis_prompt.yaml  customer_data_summary.yaml  customer_schema.sql  customer_schema.yaml  customer_summary.sql  customers.yaml  customers_mcp_only.yaml  data_insights_prompt.yaml  mcp_prompts_readme.md  report_generator_prompt.yaml  simple_greeting_prompt.yaml  sql_query_prompt.yaml
test/integration/api_configuration/sqls/customers_cached/: customers.sql  customers.yaml  customers_cache.sql
test/integration/api_configuration/sqls/customers_with_request_fields_validation/: customers.sql  customers.yaml
test/integration/api_configuration/sqls/data_types/: data_types.sql  data_types.yaml  gen_data.py
test/integration/fixtures/: test_cert.pem  test_key.pem
test/integration/smoke/: flapi.yaml
test/integration/smoke/sqls/: health.sql  health.yaml  memtest.sql  memtest.yaml
web/: .env.example  .gitignore  CMakeLists.txt  generate_embedded_ui.cmake  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
web/src/: 10_configui_tasks.md  App.svelte  app.css  app.d.ts  app.html  app.js  main.js  main.ts  svelte.d.ts
web/src/lib/: api.test.ts  api.ts  config.ts  types.ts
web/src/lib/components/: CacheConfig.svelte  ConnectionConfig.svelte  DuckDBPropertySelect.svelte  QueryConfig.svelte  RequestConfig.svelte  SqlTemplateEditor.svelte
web/src/lib/components/connection-editor/: connection-editor.svelte  index.ts
web/src/lib/config/: theme.ts
web/src/lib/router/: index.ts  router.svelte
web/src/lib/state/: index.ts
web/src/lib/stores/: app-state.test.ts  app-state.ts  aws-secrets.test.ts  aws-secrets.ts  config.ts  connections.test.ts  connections.ts  duckdb.test.ts  duckdb.ts  endpoints.test.ts  endpoints.ts  project-config.ts  project.test.ts  project.ts  schema.test.ts  schema.ts  server.test.ts  server.ts  store-factory.ts  store-interactions.test.ts  theme.ts  types.ts
web/src/lib/types/: api.ts  config.test.data.ts  config.test.ts  config.ts  index.ts  lucide.d.ts  store.ts
web/src/lib/utils/: navigation.ts  templateRenderer.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
web/src/routes/config/: +page.svelte  +page.ts
web/src/routes/connections/: +page.svelte  +page.ts
web/src/routes/doc/: +page.svelte
web/src/routes/endpoints/: +page.svelte  +page.ts
web/src/routes/project/: +page.svelte  +page.ts
web/src/test/: setup.ts
(+4169 files in other folders)
