[project]
name = "flapi-integration-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tavern>=0.24.0",
    "pytest>=7.2.2",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "pyarrow>=19.0.0",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["."]
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning:attr.*:",
    "ignore::DeprecationWarning:attr.*:"
]

[project.scripts]
test = "pytest:main"
