[project]
name = "flapi-integration-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tavern>=2.14.0",
    "pytest>=7.2.2",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "pyarrow>=19.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["."]
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning:attr.*:",
    "ignore::DeprecationWarning:attr.*:"
]

[tool.pytest-asyncio]
mode = "auto"

[project.scripts]
test = "pytest:main"
