[project]
name = "flapi-integration-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tavern>=2.14.0",
    "pytest>=7.2.2",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "pyarrow>=19.0.0",
    "polars>=1.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["."]
markers = [
    "integration: integration test suite",
    "northwind: northwind example data tests",
    "examples: tests that require the examples server",
    "read-only: read-only endpoint tests",
    "crud: create/read/update/delete tests",
    "write-operations: write operation tests",
    "multi-statement: multi-statement execution tests",
    "comprehensive: comprehensive coverage tests",
    "ducklake: DuckLake cache tests",
    "cache: cache behavior tests",
    "config-service: configuration service tests",
    "endpoints: endpoint management tests",
    "standalone_server: tests that manage their own server instance",
    "slow: slow tests that should be skipped in quick runs",
]
filterwarnings = [
    "ignore::pytest.PytestDeprecationWarning:attr.*:",
    "ignore::DeprecationWarning:attr.*:"
]

[tool.pytest-asyncio]
mode = "auto"

[project.scripts]
test = "pytest:main"
